--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "prop-types": "^15.6.0",
     "react": "^15.5.4",
+    "react-document-title": "^2.0.3",
     "react-dom": "^15.5.4",
     "react-router-dom": "^4.2.2"
   },
