reaftor: Use `react-throttle` for event debouncing

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "react": "^15.5.4",
     "react-document-title": "^2.0.3",
     "react-dom": "^15.5.4",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "react-throttle": "^0.3.0"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
