--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "dependencies": {
+    "loaders.css": "^0.1.2",
     "node-sass-chokidar": "^0.0.3",
     "npm-run-all": "^4.1.1",
     "prop-types": "^15.6.0",
     "react": "^15.5.4",
     "react-document-title": "^2.0.3",
     "react-dom": "^15.5.4",
+    "react-loaders": "^2.6.0",
     "react-router-dom": "^4.2.2",
     "react-throttle": "^0.3.0"
   },
