--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^15.5.4",
     "react-document-title": "^2.0.3",
     "react-dom": "^15.5.4",
+    "react-if": "^2.2.1",
     "react-loaders": "^2.6.0",
     "react-router-dom": "^4.2.2",
     "react-throttle": "^0.3.0"
