--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-throttle": "^0.3.0"
   },
   "devDependencies": {
+    "jest-localstorage-mock": "^2.0.1",
     "react-scripts": "0.9.5"
   },
   "scripts": {
@@ -23,5 +24,11 @@
     "build": "npm run build-css && react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "jest": {
+    "setupFiles": [
+      "./__setups__/setupTests.js",
+      "jest-localstorage-mock"
+    ]
   }
 }
